kubernetes/mongodb-statefulset.yaml
apiVersion: apps/v1

kind: StatefulSet

metadata:

  name: mongodb

  namespace: easyshop

spec:

  serviceName: mongodb-service

  replicas: 1

  selector:

    matchLabels:

      app: mongodb

  template:

    metadata:

      labels:

        app: mongodb

    spec:

      containers:

      - name: mongodb

        image: mongo:7

        ports:

        - containerPort: 27017

        volumeMounts:

        - name: mongo-storage

          mountPath: /data/db

  volumeClaimTemplates:

  - metadata:

      name: mongo-storage

    spec:

      accessModes:

      - ReadWriteOnce

      resources:

        requests:

          storage: 5Gi
