kubernetes/easyshop-service.yaml
apiVersion: v1

kind: Service

metadata:

  name: easyshop-service

  namespace: easyshop

spec:

  selector:

    app: easyshop

  ports:

  - port: 80

    targetPort: 3000

  type: ClusterIP
