kubernetes/mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:

  name: mongodb-service

  namespace: easyshop

spec:

  clusterIP: None

  selector:

    app: mongodb

  ports:

  - port: 27017
    targetPort: 27017
