kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: easyshop-ingress

  namespace: easyshop

  annotations:

    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:

  ingressClassName: nginx

  rules:

  - host: easyshop.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: easyshop-service

            port:

              number: 80
